# twine-data.rs

./: Cargo.toml  Makefile  README.md  cli.sh
proptest-regressions/: value.txt
src/: deser.rs  lib.rs  ser.rs  types.rs  value.rs  value_flat.rs
twine-data/: README.md
twine-data-cli/: Cargo.toml
twine-data-cli/src/: dump.rs  main.rs  opts.rs
twine-data/src/: deser.rs  ser.rs  shallow_value.rs  types.rs  value.rs
